CSS fix to avoid jumping effect of display lines

--- a/style.css
+++ b/style.css
@@ -44,12 +44,16 @@ body {
   border-radius: 0.5rem;
   margin-top: 0.25rem;
   background-color: #564c5f;
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-  justify-content: space-evenly;
-  flex-wrap: nowrap;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-items: end;
+  align-items: center;
   padding: 0 0.5rem;
+  font-size: 1.75rem;
+}
+
+#last-calculation {
+  font-size: 1.25rem;
 }
 
 .controls {
